# Book2MD-Converter

./: .gitignore  README.md  book_converter.py  config.py  metadata_extractor.py  pyproject.toml  quality_analyzer.py  requirements.txt  utils.py
book2md/: __init__.py  base.py  cli.py  config.py  pipeline.py  utils.py
book2md/converters/: epub.py  pdf.py  text.py
book2md/evaluation/: evaluator.py
book2md/metadata/: extractor.py
book2md/parsing/: parser.py
converters/: epub2md_LLM.py  pdf2md_LLM.py  text_extraction.py
dependency_parsing/: dependency_parsing.py
docs/: index.html
metadata/: metadata_extractor.py
quality_evaluation/: evaluator.py
raw_data/wetransfer_aldo-ricci_rabensteiner-pdf_2026-01-20_1113-20260218T105624Z-1-001/wetransfer_aldo-ricci_rabensteiner-pdf_2026-01-20_1113/: Dorfmann_Pablo geht spazieren.epub  K├╝nig_Burgi das Baby kommt.epub  Mahlknech_rosa leben.epub  Mahlknecht_Das Weihnachtsk├дnguru.epub  Mahlknecht_Schaukler.epub  Reichter_Frieda und James Bond.epub  Von Cobe_Mein  Leben bei den Trollen.epub  Zwerger_Opa erz├дhl mir.epub
raw_data/wetransfer_titoli-ki_2025-09-08_1421-20260218T105627Z-1-001/wetransfer_titoli-ki_2025-09-08_1421/: Atlantikpassage_Evelyn_Andergassen.epub  Daheim_am_Honigberg_Maria_Willeit-Kammerer.epub  Der_Zingerle_Heinrich_Schwazer.epub  Dimenticare_mai_Franz_Thaler.epub  (+17 more)
test_data/: goldoni_l_adulatore.epub
tests/: conftest.py  test_book_converter.py  test_dependency_parser.py  test_epub_converter.py  test_evaluator.py  test_metadata.py  test_pdf_converter.py  test_text_extraction.py  test_utils.py
(+31 files in other folders)
